--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-define-options": "^1.3.2",
     "vite": "^4.1.4",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.2.0"
   }
 }
